Pasty link no longer covers the menu button for mobile.

--- a/src/assets/menu.css
+++ b/src/assets/menu.css
@@ -36,13 +36,14 @@
 }
 
 .custom-menu-toggle {
-  width: 44px;
-  height: 44px;
+  width: 25px;
+  height: 25px;
   display: block;
-  position: absolute;
-  top: 3px;
-  right: 0;
   display: none;
+
+  padding-right: 17px;
+  padding-top: 10px;
+  padding-left: 17px;
 }
 
 .custom-menu-toggle .bar {
@@ -50,10 +51,11 @@
   display: block;
   width: 20px;
   height: 2px;
+
+  position: relative;
+  top: 7px;
+
   border-radius: 100px;
-  position: absolute;
-  top: 22px;
-  right: 12px;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -ms-transition: all 0.5s;
@@ -116,7 +118,7 @@
   }
 
   .pm--flexbox {
-    width: 100%;
+    width: auto;
     display: flex;
   }
 }
@@ -124,7 +126,11 @@
 @media (max-width: 62em) {
 
   .custom-menu {
-    display: block;
+    display: flex;
+  }
+
+  .custom-menu-brand {
+    flex-grow: 100;
   }
 
   .custom-menu-toggle {
